[gd_scene format=3 uid="uid://dkis3bnrh1b7d"]

[ext_resource type="Script" uid="uid://bscgkyr277i63" path="res://scripts/hud.gd" id="1_ahhtf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ahhtf"]
content_margin_left = 8.0
content_margin_top = 4.0
content_margin_right = 8.0
content_margin_bottom = 4.0
bg_color = Color(0.31538036, 0.55556333, 0.6858627, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oo0fn"]
content_margin_left = 8.0
content_margin_top = 4.0
content_margin_right = 8.0
content_margin_bottom = 4.0
bg_color = Color(0.21795988, 0.685087, 0.49478608, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5ysmq"]
content_margin_left = 8.0
content_margin_top = 4.0
content_margin_right = 8.0
content_margin_bottom = 4.0
bg_color = Color(0.53111964, 0.20201644, 0.20786747, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[node name="HUD" type="CanvasLayer" unique_id=1928650332]
script = ExtResource("1_ahhtf")

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=1978879548]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 800.0
offset_top = -155.0
offset_right = -780.0
offset_bottom = 45.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer" unique_id=1594959854]
layout_mode = 2
theme_override_constants/separation = 4

[node name="AbilityContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer" unique_id=758315931]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="Shield" type="PanelContainer" parent="MarginContainer/VBoxContainer/AbilityContainer" unique_id=19660061]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ahhtf")

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/AbilityContainer/Shield" unique_id=1823860068]
layout_mode = 2
text = "Q
Shield
15 MP"
horizontal_alignment = 1

[node name="LightMagic" type="PanelContainer" parent="MarginContainer/VBoxContainer/AbilityContainer" unique_id=1534534003]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_oo0fn")

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/AbilityContainer/LightMagic" unique_id=423303866]
layout_mode = 2
text = "E
Light
10 MP"
horizontal_alignment = 1

[node name="HeavyMagic" type="PanelContainer" parent="MarginContainer/VBoxContainer/AbilityContainer" unique_id=1658931680]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_5ysmq")

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/AbilityContainer/HeavyMagic" unique_id=1128202923]
layout_mode = 2
text = "R
Heavy
20 MP"
horizontal_alignment = 1

[node name="MovementBuff" type="PanelContainer" parent="MarginContainer/VBoxContainer/AbilityContainer" unique_id=223986243]
custom_minimum_size = Vector2(70, 60)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/AbilityContainer/MovementBuff" unique_id=1512107906]
layout_mode = 2
alignment = 1

[node name="KeyLabel" type="Label" parent="MarginContainer/VBoxContainer/AbilityContainer/MovementBuff/VBoxContainer" unique_id=1185292678]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Shift"
horizontal_alignment = 1

[node name="AbilityName" type="Label" parent="MarginContainer/VBoxContainer/AbilityContainer/MovementBuff/VBoxContainer" unique_id=171281470]
layout_mode = 2
horizontal_alignment = 1

[node name="TimerLabel" type="Label" parent="MarginContainer/VBoxContainer/AbilityContainer/MovementBuff/VBoxContainer" unique_id=190017898]
layout_mode = 2
horizontal_alignment = 1

[node name="CooldownOverlay" type="ColorRect" parent="MarginContainer/VBoxContainer/AbilityContainer/MovementBuff/VBoxContainer" unique_id=365637307]
visible = false
layout_mode = 2
color = Color(0, 0, 0, 0.7019608)

[node name="HPBar" type="ProgressBar" parent="MarginContainer/VBoxContainer" unique_id=1552030233]
custom_minimum_size = Vector2(300, 24)
layout_mode = 2
value = 100.0
show_percentage = false

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HPBar" unique_id=1542006894]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "100 / 100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ManaBar" type="ProgressBar" parent="MarginContainer/VBoxContainer" unique_id=775309612]
custom_minimum_size = Vector2(300, 20)
layout_mode = 2
value = 100.0
show_percentage = false

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ManaBar" unique_id=1261899035]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "100 / 100"
horizontal_alignment = 1
vertical_alignment = 1
